eoullim-Project/src/main/java/org/example/eoullimback/_common/error/exception/Exception500.java
package org.example.eoullimback._common.error.exception;

public class Exception500 extends RuntimeException {
    public Exception500(String msg) {
        super(msg);
    }

}
